[project]
name = "vinted_scraper"
version = "3.1.0"
description = "A very simple Python package for scraping Vinted. Supports both synchronous and asynchronous operations with automatic cookie management and typed responses."
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"
authors = [{ name = "Giglium" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
]

dependencies = [
    "httpx[brotli]>=0.20.0 ; python_full_version >= '3.8'",
]

[tool.isort]
profile = "black"

[project.urls]
Changelog = "https://github.com/Giglium/vinted_scraper/releases"
Documentation = "https://github.com/Giglium/vinted_scraper"
Homepage = "https://github.com/Giglium/vinted_scraper"
Issues = "https://github.com/Giglium/vinted_scraper/issues"
Source = "https://github.com/Giglium/vinted_scraper"

[build-system]
requires = ["uv_build>=0.8.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black==26.3.1 ; python_full_version == '3.14.*'",
    "coverage==7.13.4 ; python_full_version == '3.14.*'",
    "isort==8.0.1 ; python_full_version == '3.14.*'",
    "no-implicit-optional==1.4 ; python_full_version == '3.14.*'",
    "pdoc==16.0.0 ; python_full_version == '3.14.*'",
]
